Fixes navlink spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -166,10 +166,6 @@
   margin-left: 0;
 }
 
-.Navbar > #links > a:last-of-type {
-  margin-right: 0;
-}
-
 .Navbar > #links > button {
   margin-right: 0;
   padding-left: 0;
